[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/game/world/GameWorld.gd" type="Script" id=1]
[ext_resource path="res://scenes/game/world/environment/CustomTileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/world/hover_text/WorldHoverText.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sprites/parallax/cave.png" type="Texture" id=4]

[node name="GameWorld" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "This node contains all world collision and an entity pool. Spawning/despawning of
entities is managed by this node, but are attached to the entity pool node"
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 160, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 4 )
centered = false

[node name="Geometry" type="Node2D" parent="."]

[node name="CustomTileMap" parent="Geometry" instance=ExtResource( 2 )]
script = null

[node name="DeathPits" type="Area2D" parent="Geometry"]
collision_layer = 0
collision_mask = 4

[node name="EntityPool" type="Node2D" parent="."]
__meta__ = {
"_editor_description_": "This node holds all the active game objects. The parent GameWorld node manages the objects in this node"
}

[node name="ScrapHoverText" parent="." instance=ExtResource( 3 )]
custom_colors/font_color = Color( 0.607843, 0.737255, 0.0588235, 1 )

[node name="WeaponHoverText" parent="." instance=ExtResource( 3 )]
custom_colors/font_color = Color( 0.607843, 0.737255, 0.0588235, 1 )

[node name="SoundPool" type="Node" parent="."]

[connection signal="body_entered" from="Geometry/DeathPits" to="." method="_on_DeathPits_body_entered"]
[connection signal="display_off" from="ScrapHoverText" to="." method="_on_ScrapHoverText_display_off"]
[connection signal="display_off" from="WeaponHoverText" to="." method="_on_ScrapHoverText_display_off"]
